<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Automorama</string>
    <string name="title_activity_settings">Settings</string>
    <string name="consumo_medio">Consumo médio: %1$s Km/L</string>
    <string name="sem_consumo_medio">Consumo médio: É necessário pelo menos 2 abastecimentos com o tanque cheio (com exceção do primeiro abastecimento) para fazer a média</string>
    <string name="consumo_medio_calculando">Consumo médio: Calculando…</string>
    <string name="detalhes_marca">Marca: %1$s</string>
    <string name="detalhes_modelo">Modelo: %1$s</string>
    <string name="detalhes_fabricacao_modelo">Ano Fabricação/Modelo: %1$s/%2$s</string>
    <string name="detalhes_apelido">Apelido: %1$s</string>
    <string name="detalhes_Placa">Placa: %1$s</string>
    <string name="lista_veiculo_nenhum_veiculo">"Nenhum veículo encontrado clique no '+' para cadastrar"</string>
    <string name="lista_veiculo_app_bar">Veículos</string>
    <string name="form_veiculo_ano_modelo">Ano do Modelo</string>
    <string name="form_veiculo_marca">Marca</string>
    <string name="form_veiculo_modelo">Modelo</string>
    <string name="form_veiculo_ano_fabricacao">Ano de Fabricação</string>
    <string name="form_btSalvar">Salvar</string>
    <string name="form_btEditar">Editar</string>
    <string name="form_btDeletar">Deletar</string>
    <string name="form_placa_veiculo">Placa do Veículo</string>
    <string name="form_veiculo_apelido">Apelido(opcional)</string>
    <string name="lista_consumo_nenhum_abastecimento">"Nenhum abastecimento encontrado clique no '+' para cadastrar"</string>
    <string name="lista_manutecao_nenhuma_manutecao">"Nenhuma manutenção encontrada clique no '+' para cadastrar"</string>
    <string name="item_lista_consumo_consumo">%1$s Km/L</string>
    <string name="item_lista_consumo_data">%1$s</string>
    <string name="item_lista_consumo_percorrido">Percorrido com %1$s</string>
    <string name="item_lista_consumo_abastecido">Abastecido com %1$s</string>
    <string name="form_consumo_km_anterior">Quilômetro Anterior</string>
    <string name="form_consumo_km_atual">Quilômetro Atual</string>
    <string name="form_consumo_litros">Litros</string>
    <string name="form_consumo_tanque_cheio">Tanque Cheio</string>
    <string name="data">%1$s/%2$s/%3$s</string>
    <string name="veiculo">%1$s %2$s/%3$s</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="atencao">ATENÇÃO</string>
    <string name="confirmar_deletar_veiculo">Tem certeza que deseja deletar este veículo? %1$s</string>
    <string name="moeda">R$</string>
    <string name="combustivel">Combustível: %1$s</string>
    <string name="abastecimentos">Abastecimentos</string>
    <string name="manutencao">Manutenção</string>
    <string name="gastos">Gastos</string>
    <string name="detalhes_do_veiculo">Detalhes do Veículo</string>
    <string name="verifique_erros">Verifique Erros</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>


    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="valor">Valor</string>
    <string name="erro_formato_ano">Ano no formato inválido!</string>
    <string name="preencha_campos_obrigatorios">Preencha todos os campos obrigatórios</string>
    <string name="placa_cadastrada_mensagem">Já existe um veículo com essa placa cadastrado</string>
    <string name="ano_modelo_invalido">Ano Modelo com formato inválido</string>
    <string name="ano_fabricacao_invalido">Ano fabricação no formato inválido</string>
    <string name="selecione_um_aplicativo">Selecione um aplicativo</string>
    <string name="campo_obrigatorio">Campo obrigatório!</string>
    <string name="erro_kmAnterior_maior_kmAtual">Km Anterior maior que Km Atual</string>
    <string name="title_activity_gastos">GastosActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="campo_valor_manutencao_obrigatorio">Campo obrigatório quando \'Realizado\' está marcado!</string>
    <string name="form_manutencao_data_invalida">Data lelecionada maior que data atual, por favor desmarque o campo \'Realizado\'</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>
